js/src/tests/test262/language/statements/class/elements/syntax/early-errors/invalid-names/field-init-fn-member-expression-bad-reference.js
DONOTEVALUATE
(
)
;
class
C
{
f
=
function
(
)
{
something
.
#
x
}
}
